[gd_scene load_steps=2 format=3 uid="uid://bykx7qci4fkvl"]

[ext_resource type="Script" uid="uid://dlf8mjbbts8fx" path="res://scenes/ui/UnitInfoPanel.gd" id="1_balmg"]

[node name="UnitInfoPanel" type="PanelContainer"]
script = ExtResource("1_balmg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Jm√©no jednotky"

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HP: 100 / 100"

[node name="AttackLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="BlockLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Blok: 0"

[node name="StatusEffectsList" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
